[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/header.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/menus/relationships/get.gd" type="Script" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/resource_displays/relationship.tscn" type="PackedScene" id=4]

[node name="Get" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 1068.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1012.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "Get"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 1012.0
margin_bottom = 1064.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1007.0
margin_bottom = 1012.0

[node name="InputFields" type="PanelContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 1002.0
margin_bottom = 69.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/InputFields"]
margin_left = 6.0
margin_top = 4.0
margin_right = 996.0
margin_bottom = 65.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserID" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/InputFields/VBoxContainer"]
margin_right = 990.0
margin_bottom = 28.0
clear_button_enabled = true
placeholder_text = "Enter User ID"
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/InputFields/VBoxContainer"]
margin_top = 33.0
margin_right = 990.0
margin_bottom = 61.0
text = "Get Relationship"

[node name="OutputFields" type="PanelContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 1002.0
margin_bottom = 1007.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/OutputFields"]
margin_left = 6.0
margin_top = 4.0
margin_right = 996.0
margin_bottom = 929.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/OutputFields/VBoxContainer"]
margin_right = 990.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/OutputFields/VBoxContainer/Result"]
margin_right = 54.0
margin_bottom = 28.0
text = "Result:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/OutputFields/VBoxContainer/Result"]
margin_left = 59.0
margin_right = 990.0
margin_bottom = 28.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Relationship" parent="VBoxContainer/MarginContainer/VBoxContainer/OutputFields/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 990.0
margin_bottom = 925.0
[connection signal="button_down" from="VBoxContainer/MarginContainer/VBoxContainer/InputFields/VBoxContainer/Button" to="." method="_on_button_down"]
